Production ready: fix deployment issues, update docs

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,29 @@
-DATABASE_URI=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+# =============================================================================
+# LRIMa Website - Environment Variables
+# =============================================================================
+# Copy this file to .env and fill in the values for your environment.
+
+# -----------------------------------------------------------------------------
+# Database Configuration
+# -----------------------------------------------------------------------------
+# MongoDB connection string. Use a secure, authenticated connection in production.
+# Local development: mongodb://127.0.0.1:27017/lrima-website
+# Production: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>
+DATABASE_URI=mongodb://127.0.0.1:27017/lrima-website
+MONGODB_URI=mongodb://127.0.0.1:27017/lrima-website
+
+# -----------------------------------------------------------------------------
+# Payload CMS Configuration
+# -----------------------------------------------------------------------------
+# Secret key for Payload CMS authentication and encryption.
+# IMPORTANT: Generate a secure 64+ character random string for production:
+#   node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+PAYLOAD_SECRET=your-secret-key-here-change-in-production
+
+# -----------------------------------------------------------------------------
+# Site Configuration
+# -----------------------------------------------------------------------------
+# Public URL of the site. Used for canonical URLs, OG tags, sitemaps, etc.
+# Local: http://localhost:3000
+# Production: https://your-domain.com
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
