--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide && cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "dev": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide && cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "devsafe": "rm -rf .next && paraglide-js compile --project ./project.inlang --outdir ./src/paraglide && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
@@ -23,19 +23,31 @@
     "@payloadcms/next": "3.63.0",
     "@payloadcms/richtext-lexical": "3.63.0",
     "@payloadcms/ui": "3.63.0",
+    "@types/three": "^0.181.0",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
+    "framer-motion": "^12.23.25",
     "graphql": "^16.8.1",
+    "gsap": "^3.14.1",
     "next": "15.4.7",
+    "p5": "^2.1.1",
     "payload": "3.63.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.34.2"
+    "sharp": "0.34.2",
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.181.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "@inlang/cli": "^3.0.0",
+    "@inlang/paraglide-js": "2.4.0",
     "@playwright/test": "1.56.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
+    "@types/p5": "^1.7.7",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
@@ -50,9 +62,7 @@
     "tailwindcss": "^3.4.18",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.2.3",
-    "@inlang/paraglide-js": "2.4.0",
-    "@inlang/cli": "^3.0.0"
+    "vitest": "3.2.3"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0",
