--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@payloadcms/db-mongodb": "3.63.0",
     "@payloadcms/next": "3.63.0",
     "@payloadcms/richtext-lexical": "3.63.0",
+    "@payloadcms/storage-vercel-blob": "^3.73.0",
     "@payloadcms/ui": "3.63.0",
     "@types/three": "^0.181.0",
     "clsx": "^2.1.1",
